# hoprag

./: .gitignore  README.md  pyproject.toml
demo/: examples_cache.json  index.html  rag.html  standalone.html
docs/superpowers/plans/: 2026-06-17-chinese-rag-tool.md  2026-06-17-hoprag.md
docs/superpowers/specs/: 2026-06-17-agentic-multihop-rag-design.md  2026-06-17-chinese-rag-tool-design.md
scripts/: build_standalone.py  demo_server.py  precompute_examples.py  rag_tool.py  run_eval.py
src/hoprag/: agentic_rag.py  claude_client.py  dataset.py  demo_corpus.py  eval_harness.py  indexer.py  ingest.py  metrics.py  naive_rag.py  prompts.py  prompts_zh.py  rag_app.py  rag_eval.py  report.py  retriever.py  server.py  types.py
tests/: conftest.py  test_agentic_rag.py  test_claude_client.py  test_dataset.py  test_eval_harness.py  test_ingest.py  test_metrics.py  test_naive_rag.py  test_prompts.py  test_prompts_zh.py  test_rag_app.py  test_rag_eval.py  test_report.py  test_retriever.py  test_server.py  test_types.py
